fixed pod spacing mobile

--- a/src/App.css
+++ b/src/App.css
@@ -128,7 +128,7 @@ button {
 @media only screen and (max-width: 1024px) {
   .projects-container {
     /* padding-top: 5em; */
-    height: 150vh;
+    height: auto;
     width: 100vw;
   }
 }
@@ -151,7 +151,7 @@ button {
   justify-content: space-evenly;
   align-items: center;
   width: 100vw;
-  height: 80vh;
+  height: 80%;
   /* margin-bottom: 5%; */
 }
 
@@ -159,7 +159,7 @@ button {
   .projects {
     flex-direction: column;
     justify-content: safe;
-    min-height: 120vh;
+    /* min-height: 120vh; */
     margin-top: 2em;
     margin-bottom: 2em;
   }
@@ -235,8 +235,8 @@ button {
 
 @media only screen and (max-width: 1024px) {
   .project-pods {
-    height: 30%;
-    width: 80%;
+    height: 20em;
+    /* max-width: 90%; */
     margin-bottom: 10%;
     border-radius: 15%;
   }
